--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <a class="logo" href="#"><img src="img/logo.png" alt="logo"/></a>
             <nav class="menu" id="menu">
                 <ul>
-                    <li><a href="#">Home</a>
-                    <a href="#">Services</a>
-                    <a href="#">Our Works</a>
-                    <a href="#">Team</a>
-                    <a href="#">Testimonials</a>
-                    <a href="#">Contact</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Our Works</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </div>
