--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
         <script type="text/javascript" src="js/respond.js"></script>
+        <script type="text/javascript" src="js/caroufredsel.js"></script>
     </head>
 </html>
 <body>
@@ -39,10 +41,27 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+            <div class="clearfix"></div>
         </div>
-    </div>
+    </div>    
 </header>
+
+<section>
+    <ul class="slider-carousel" id="slider-carousel">
+        <li>
+            <h1>Hi</h1>
+        </li>
+        <li>
+            <h1>Hi</h1>
+        </li>
+        <li>
+            <h1>Hi</h1>
+        </li>
+
+    </ul>
+</section>
 <!-- javascripts -->
+
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
