--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- font awesome bootstrapcdn by maxcdn -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/reset.css">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
         <script type="text/javascript" src="js/respond.js"></script>
         <script type="text/javascript" src="js/caroufredsel.js"></script>
