--- a/index.html
+++ b/index.html
@@ -1,67 +1,131 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width", initial-scale="1.0">
-        <!-- css styles -->
-        <style rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></style>
-        
-        <!-- google font ralewey normal 400 -->
-        <!-- font-family: 'Raleway', sans-serif; -->        
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet"> 
-        <!-- google font ralewey bold 700 -->
-        <!-- font-family: 'Raleway', sans-serif; -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
-        <!-- font awesome bootstrapcdn by maxcdn -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="css/reset.css">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
-        <script type="text/javascript" src="js/respond.js"></script>
-        <script type="text/javascript" src="js/caroufredsel.js"></script>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width" , initial-scale="1.0">
+    <!-- css styles -->
+    <style rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></style>
+
+    <!-- google font ralewey normal 400 -->
+    <!-- font-family: 'Raleway', sans-serif; -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <!-- google font ralewey bold 700 -->
+    <!-- font-family: 'Raleway', sans-serif; -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
+    <!-- font awesome bootstrapcdn by maxcdn -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/respond.js"></script>
+    <script type="text/javascript" src="js/caroufredsel.js"></script>
+</head>
+
 </html>
+
 <body>
-<!-- body content -->
-<header class="secondary-dark-blue-bg">
-    <div class="container">
-        <div class="row">
-            <a class="logo" href="#"><img src="img/logo.png" alt="logo"/></a>
-            <nav class="menu" id="menu">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Our Works</a></li>
-                    <li><a href="#">Team</a></li>
-                    <li><a href="#">Testimonials</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="clearfix"></div>
+    <!-- body content -->
+    <!-- <header class="secondary-dark-blue-bg"> -->
+    <header>
+        <div class="container">
+            <div class="row">
+                <a class="logo" href="#"><img src="img/logo.png" alt="logo" /></a>
+                <nav class="menu" id="menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Our Works</a></li>
+                        <li><a href="#">Team</a></li>
+                        <li><a href="#">Testimonials</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="clearfix"></div>
+            </div>
         </div>
-    </div>    
-</header>
+    </header>
 
-<section>
-    <ul class="slider-carousel" id="slider-carousel">
-        <li>
-            <h1>Hi</h1>
-        </li>
-        <li>
-            <h1>Hi</h1>
-        </li>
-        <li>
-            <h1>Hi</h1>
-        </li>
+    <section>
+        <ul class="slider-carousel" id="slider-carousel">
+            <li class="img1">
+                <h1>Welcome to <span class="primary">Corporate</span> </h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout </p>
+                <a href="#" class="primary-bg cta1">Get Started</a><a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
+            </li>
+            <li class="img1">
+                <h1>Welcome to <span class="primary">Corporate</span> </h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout </p>
+                <a href="#" class="primary-bg cta1">Get Started</a><a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
+            </li>
+            <li class="img1">
+                <h1>Welcome to <span class="primary">Corporate</span> </h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout </p>
+                <a href="#" class="primary-bg cta1">Get Started</a><a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
+            </li>
+        </ul>
+        <ul class="sliderpager">
+            <li><a href="#"><i class="fa fa-circle"></i></a></li>
+            <li><a href="#"><i class="fa fa-circle"></i></a></li>
+            <li><a href="#"><i class="fa fa-circle"></i></a></li>
+        </ul>
+    </section>
+    <!-- Our Services -->
+    <section class="services section-padding">
+        <div class="services-header">
+            <h1>Services</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout </p>
+        </div>
+        <div class="services-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <p><i class="fa fa-laptop"></i></p>
+                        <h3>Web Design</h3>
+                        <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p><i class="fa fa-edit"></i></p>
+                        <h3>Graphic Design</h3>
+                        <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p><i class="fa fa-cog"></i></p>
+                        <h3>PSD to HTML/CSS</h3>
+                        <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English</p>
+                    </div>
+                </div>
 
-    </ul>
-</section>
-<!-- javascripts -->
+                <br>
 
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+                <div class="row">
+                    <div class="col-md-4">
+                        <p><i class="fa fa-bars"></i></p>
+                        <h3>Wordpress</h3>
+                        <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p><i class="fa fa-leaf"></i></p>
+                        <h3>Theme Development</h3>
+                        <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p><i class="fa fa-globe"></i></p>
+                        <h3>Unlimited Support</h3>
+                        <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- javascripts -->
+
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
