--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- Our Services -->
     <section class="services section-padding">
         <div class="services-header">
-            <h1>Services</h1>
+            <h1>Our Services</h1>
             <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout </p>
         </div>
         <div class="services-content">
@@ -122,6 +122,89 @@
 
             </div>
         </div>
+    </section>
+
+    <section class="portfolio section-padding">
+        <div class="portfolio-header">
+            <h1 class="white">Our Works</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout </p>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <ul class="portfolio-carousel">
+                    <li>
+                        <div class="inner-content">
+                            <img src="img/portfolio/project1.png">
+                            <div class="overlay-content">
+                                <h1>Environment Website</h1>
+                                <p><a href="#">Click here </a>for details</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner-content">
+                            <img src="img/portfolio/project2.png">
+                            <div class="overlay-content">
+                                <h1>Environment Website</h1>
+                                <p><a href="#">Click here </a>for details</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner-content">
+                            <img src="img/portfolio/project3.png">
+                            <div class="overlay-content">
+                                <h1>Environment Website</h1>
+                                <p><a href="#">Click here </a>for details</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner-content">
+                            <img src="img/portfolio/project4.png">
+                            <div class="overlay-content">
+                                <h1>Environment Website</h1>
+                                <p><a href="#">Click here </a>for details</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner-content">
+                            <img src="img/portfolio/project2.png">
+                            <div class="overlay-content">
+                                <h1>Environment Website</h1>
+                                <p><a href="#">Click here </a>for details</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner-content">
+                            <img src="img/portfolio/project1.png">
+                            <div class="overlay-content">
+                                <h1>Environment Website</h1>
+                                <p><a href="#">Click here </a>for details</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner-content">
+                            <img src="img/portfolio/project4.png">
+                            <div class="overlay-content">
+                                <h1>Environment Website</h1>
+                                <p><a href="#">Click here </a>for details</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+
+                <ul class="portfolio-nav">
+                    <li id="prev">&lt;</li>
+                    <li id="next">&gt;</li>
+                </ul>
+            </div>
+        </div>
+
     </section>
 
     <!-- javascripts -->
