--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+
     <!-- google font ralewey bold 700 -->
     <!-- font-family: 'Raleway', sans-serif; -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
+
+
     <!-- font awesome bootstrapcdn by maxcdn -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+
+
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
@@ -31,6 +36,8 @@
     <!-- Include JS -->
     <!-- <script src="jquery.min.js"></script>
     <script src="owlcarousel/owl.carousel.min.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 
 </html>
@@ -433,7 +440,7 @@
             <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout </p>
         </div>
 
-        <form action="">
+        <form class="contact-form">
             <!-- <fieldset> -->
             <input type="text" id="name" placeholder="Name">
             <!-- </fieldset> -->
@@ -452,8 +459,46 @@
         </form>
     </section>
 
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h1>About Corporate</h1>
+                    <p class="about">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English</p>
+                    <p><i class="fa fa-fa-envelope"></i><span class="contact-email">corporate@email.com</span></p>
+                    <p><i class="fa fa-fa-mobile"></i><span class="contact-phone">+414 777 444</span></p>
+                    <p><i class="fa fa-fa-location-arrow"></i><span class="contact-location">69 , New York City , New York</span></p>
+                </div>
+                <div class="col-md-4">
+                    <h1>Get Blog Updates</h1>
+                    <form class="update-form">
+                        <!-- <fieldset> -->
+                        <input type="text" id="take-email" placeholder="Enter your email here">
+                        <!-- </fieldset> -->
+                        <!-- <fieldset> -->
+                        <input type="submit" id="submit-button" value="Sign Up">
+                        <!-- </fieldset> -->
+                    </form>
+                </div>
+                <div class="col-md-4">
+                    <h1>Stay In Touch</h1>
+                    <ul class="footer-social-links">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>Copyright &copy;<span class="primary">Corporate</span> 2015 . All Rights Reserved.</p>
+        </div>
+    </footer>
+
     <!-- javascripts -->
 
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <!-- <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
     <script type="text/javascript" src="js/main.js"></script>
 </body>
