--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <!-- font awesome bootstrapcdn by maxcdn -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 
-
+    <link rel="stylesheet" type="text/css" href="css/slicknav.min.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/respond.js"></script>
     <script type="text/javascript" src="js/caroufredsel.js"></script>
@@ -49,8 +50,8 @@
         <div class="container">
             <div class="row">
                 <a class="logo" href="#"><img src="img/logo.png" alt="logo" /></a>
-                <nav class="menu" id="menu">
-                    <ul>
+                <nav>
+                    <ul class="menu" id="menu">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Our Works</a></li>
@@ -500,5 +501,6 @@
     <!-- javascripts -->
 
     <!-- <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
+    <script type="text/javascript" src="js/jquery.slicknav.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
